--- a/style.scss
+++ b/style.scss
@@ -265,5 +265,36 @@ tbody tr {
     }
     .nav-hamburger-menu {
         display: block;
+        position: absolute;
+        right: 0;
+    }
+
+    .hamburger-button {
+        color: white;
+    }
+
+    .hamburger-menu-items {
+        position: absolute;
+        display: none;
+        background: $thunder;
+        z-index: 1;
+        text-align: left;
+        right: 0;
+        top: 38px;
+        height: 100vh;
+        width: 35vw;
+        min-width: 150px;
+
+        a {
+            color: white;
+            display: block;
+            padding: 10px 20px;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .sub-nav {
+        display: none;
     }
 }
